--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 	compile('org.codehaus.jackson:jackson-mapper-asl:1.9.13')
 	compile('org.apache.shiro:shiro-core:1.4.0-RC2')
 	compile('org.apache.shiro:shiro-spring:1.4.0-RC2')
-	compile('org.apache.shiro:shiro-spring-boot-web-starter:1.4.0-RC2')
+	compile('org.apache.shiro:shiro-web:1.4.0-RC2')
 	runtime('mysql:mysql-connector-java')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
