--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -11,6 +11,7 @@ scsb.solr.client.url=localhost:9090/
 scsb.url=localhost:9093/
 solr.url=localhost:8983/solr
 solr.parent.core=recap
+scsb.shiro=localhost:9092/
 
 #Max request parameters Count. A value of less than 0 means no limit.
 tomcat.maxParameterCount=-1
