SCSB-SHIRO url added in property files

--- a/src/main/resources/application-local-container.properties
+++ b/src/main/resources/application-local-container.properties
@@ -11,6 +11,7 @@ scsb.solr.client.url=scsb-solr-client:9090/
 scsb.url=scsb:9093/
 solr.url=scsb-solr-server:8983/solr
 solr.parent.core=recap
+scsb.shiro=scsb-shiro:9092/
 
 #Max request parameters Count. A value of less than 0 means no limit.
 tomcat.maxParameterCount=-1
