--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -11,6 +11,7 @@ scsb.solr.client.url=uat-recap.htcinc.com:9090/
 scsb.url=uat-recap.htcinc.com:9093/
 solr.url=uat-recap.htcinc.com:8983/solr
 solr.parent.core=recap
+scsb.shiro=uat-recap.htcinc.com:9092/
 
 #Max request parameters Count. A value of less than 0 means no limit.
 tomcat.maxParameterCount=-1
