Session Time confir and login screen redirection

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,8 @@ spring.datasource.password=recap
 
 #Tomcat Port
 server.port=9091
+#Session Time out in Seconds
+server.session.timeout=900
 
 server.protocol:http://
 scsb.solr.client.url=dev-recap.htcinc.com:9090/
