--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,6 +5,8 @@ spring.datasource.password=recap
 
 #Tomcat Port
 server.port=9091
+#Session Time out in Seconds
+server.session.timeout=60
 
 server.protocol:http://
 scsb.solr.client.url=localhost:9090/
