--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -22,3 +22,24 @@ ils.nypl.bibdata.parameter = /v0.1/recap/nypl-bibs?barcode={barcode}&customercod
 ils.nypl.operator.user.id = ${nypl.operator.user.id}
 ils.nypl.operator.password = ${nypl.operator.password}
 ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
+
+app.service.security=http://localhost:9091/j_spring_cas_security_check
+app.service.home=http://localhost:9091/search
+app.service.logout.scsb=http://localhost:9091/
+app.admin.userName=admin
+
+default.cas.service.login=http://localhost:8080/cas/login
+default.cas.service.logout=http://localhost:8080/cas/logout
+default.cas.url.prefix=http://localhost:8080/cas/
+
+logout.redirect.uri=http://localhost:9091/
+
+#PUL CAS informations
+cas.1.service.login=https://fed.princeton.edu/cas/login
+cas.1.service.logout=https://fed.princeton.edu/cas/logout?service=
+cas.1.url.prefix=https://fed.princeton.edu/cas
+
+#CUL CAS information
+cas.2.service.login=http://localhost:8080/cas/login
+cas.2.service.logout=http://localhost:8080/cas/logout?service=
+cas.2.url.prefix=http://localhost:8080/cas
