RECAP-411 : Integrated OAuth Authentication.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -22,3 +22,13 @@ ils.nypl.bibdata.parameter = /v0.1/recap/nypl-bibs?barcode={barcode}&customercod
 ils.nypl.operator.user.id = ${nypl.operator.user.id}
 ils.nypl.operator.password = ${nypl.operator.password}
 ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
+
+security.oauth2.client.clientId = 682344361936771
+security.oauth2.client.clientSecret = 2b6d372bef87b9de3152181302e9470c
+security.oauth2.client.accessTokenUri = https://graph.facebook.com/oauth/access_token
+security.oauth2.client.userAuthorizationUri = https://www.facebook.com/dialog/oauth
+security.oauth2.client.tokenName = oauth_token
+security.oauth2.client.authenticationScheme = query
+security.oauth2.client.clientAuthenticationScheme = form
+security.oauth2.client.use-current-uri = true
+security.oauth2.resource.userInfoUri = https://graph.facebook.com/me
