--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-ws')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.security:spring-security-cas')
+	compile('org.springframework.security.oauth:spring-security-oauth2')
 	compile('org.springframework.data:spring-data-solr:2.0.1.RELEASE')
 			{exclude module: 'solr-solrj'; exclude module: 'solr-data-commons'; exclude module: 'spring-data-jpa'}
 	compile('org.codehaus.jettison:jettison:1.3.7')
