Added loggin configuration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,6 +12,9 @@ server.protocol:http://
 scsb.url=dev-recap.htcinc.com:9093/
 scsb.shiro=dev-recap.htcinc.com:9092/
 
+#Logging Settings
+logging.file=/recap-vol/scsb-ui/logs/scsb-ui.log
+
 #Max request parameters Count. A value of less than 0 means no limit.
 tomcat.maxParameterCount=-1
 
