--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,6 +12,9 @@ server.protocol:http://
 scsb.url=localhost:9093/
 scsb.shiro=localhost:9092/
 
+#Logging Settings
+logging.file=${user.home}/scsb-ui/logs/scsb-ui.log
+
 #Max request parameters Count. A value of less than 0 means no limit.
 tomcat.maxParameterCount=-1
 
