RECAP-411 : Added properties to tst property file.

--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -22,3 +22,34 @@ ils.nypl.bibdata.parameter = /v0.1/recap/nypl-bibs?barcode={barcode}&customercod
 ils.nypl.operator.user.id = ${nypl.operator.user.id}
 ils.nypl.operator.password = ${nypl.operator.password}
 ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
+
+app.service.security=j_spring_cas_security_check
+app.service.home=http://tst-recap.htcinc.com:9091
+app.service.logout.scsb=http://tst-recap.htcinc.com:9091/
+app.admin.userName=admin
+
+default.cas.service.login=http://tst-recap.htcinc.com:8080/cas/login
+default.cas.service.logout=http://tst-recap.htcinc.com:8080/cas/logout
+default.cas.url.prefix=http://tst-recap.htcinc.com:8080/cas/
+
+logout.redirect.uri=http://tst-recap.htcinc.com:9091/
+
+#PUL CAS informations
+cas.1.service.login=https://fed.princeton.edu/cas/login
+cas.1.service.logout=https://fed.princeton.edu/cas/logout?service=
+cas.1.url.prefix=https://fed.princeton.edu/cas
+
+#CUL CAS information
+cas.2.service.login=https://casdev.cc.columbia.edu/cas/login
+cas.2.service.logout=https://casdev.cc.columbia.edu/cas/logout?service=
+cas.2.url.prefix=https://casdev.cc.columbia.edu/cas
+
+security.oauth2.client.clientId = htc_scsb
+security.oauth2.client.clientSecret = m0Fg7xbm3ZPq5djD3gBHTu3mQYrBpf6U
+security.oauth2.client.accessTokenUri = https://isso.nypl.org/oauth/token
+security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/authorize
+security.oauth2.client.scope = openid offline_access login:staff
+security.oauth2.client.clientAuthenticationScheme = form
+security.oauth2.client.registered-redirect-uri = http://tst-recap.htcinc.com:9091/search
+security.oauth2.client.pre-established-redirect-uri = http://tst-recap.htcinc.com:9091/search
+security.oauth2.resource.userInfoUri = https://graph.facebook.com/me
