RECAP-411 : Changed the property to point tst

--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -50,9 +50,10 @@ cas.2.url.prefix=https://casdev.cc.columbia.edu/cas
 security.oauth2.client.clientId = htc_scsb
 security.oauth2.client.clientSecret = m0Fg7xbm3ZPq5djD3gBHTu3mQYrBpf6U
 security.oauth2.client.accessTokenUri = https://isso.nypl.org/oauth/token
-security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/authorize
+security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/authorize/
 security.oauth2.client.scope = openid offline_access login:staff
 security.oauth2.client.clientAuthenticationScheme = form
+security.oauth2.client.use-current-uri = false
 security.oauth2.client.registered-redirect-uri = http://tst-recap.htcinc.com:9091/search
 security.oauth2.client.pre-established-redirect-uri = http://tst-recap.htcinc.com:9091/search
 security.oauth2.resource.userInfoUri = https://graph.facebook.com/me
