RECAP-411 : Added login option for HTC Users

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -47,6 +47,11 @@ cas.2.service.login=http://localhost:8080/cas/login
 cas.2.service.logout=http://localhost:8080/cas/logout?service=
 cas.2.url.prefix=http://localhost:8080/cas
 
+#HTC CAS information
+cas.4.service.login=http://tst-recap.htcinc.com:8080/cas/login
+cas.4.service.logout=http://tst-recap.htcinc.com:8080/cas/logout?service=
+cas.4.url.prefix=http://tst-recap.htcinc.com:8080/cas
+
 security.oauth2.client.clientId = 682344361936771
 security.oauth2.client.clientSecret = 2b6d372bef87b9de3152181302e9470c
 security.oauth2.client.accessTokenUri = https://graph.facebook.com/oauth/access_token
