code duplication reduction-scsb-ui

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ dependencies {
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+	testCompile('junit:junit:4.12')
 }
 
 jacocoTestReport {
