--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-ws')
 	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.security:spring-security-jwt')
 	compile('org.springframework.security:spring-security-cas')
 	compile('org.springframework.security.oauth:spring-security-oauth2')
 	compile('org.springframework.data:spring-data-solr:2.0.1.RELEASE')
