--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -26,14 +26,15 @@ ils.nypl.operator.user.id = ${nypl.operator.user.id}
 ils.nypl.operator.password = ${nypl.operator.password}
 ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
 
+#-- Properties for authentication server
 app.service.security=j_spring_cas_security_check
 app.service.home=http://localhost:9091
 app.service.logout.scsb=http://localhost:9091/
 app.admin.userName=admin
 
-default.cas.service.login=http://localhost:8080/cas/login
-default.cas.service.logout=http://localhost:8080/cas/logout
-default.cas.url.prefix=http://localhost:8080/cas/
+default.cas.service.login=http://192.168.55.198:8080/cas/login
+default.cas.service.logout=http://192.168.55.198:8080/cas/logout
+default.cas.url.prefix=http://192.168.55.198:8080/cas/
 
 logout.redirect.uri=http://localhost:9091/
 
@@ -43,14 +44,14 @@ cas.1.service.logout=https://fed.princeton.edu/cas/logout?service=
 cas.1.url.prefix=https://fed.princeton.edu/cas
 
 #CUL CAS information
-cas.2.service.login=http://localhost:8080/cas/login
-cas.2.service.logout=http://localhost:8080/cas/logout?service=
-cas.2.url.prefix=http://localhost:8080/cas
+cas.2.service.login=https://casdev.cc.columbia.edu/cas/login
+cas.2.service.logout=https://casdev.cc.columbia.edu/cas/logout?service=
+cas.2.url.prefix=https://casdev.cc.columbia.edu/cas
 
 #HTC CAS information
-cas.4.service.login=http://localhost:8080/cas/login
-cas.4.service.logout=http://localhost:8080/cas/logout?service=
-cas.4.url.prefix=http://localhost:8080/cas
+cas.4.service.login=http://192.168.55.198:8080/cas/login
+cas.4.service.logout=http://192.168.55.198:8080/cas/logout?service=
+cas.4.url.prefix=http://192.168.55.198:8080/cas
 
 security.oauth2.client.clientId = htc_scsb
 security.oauth2.client.clientSecret = m0Fg7xbm3ZPq5djD3gBHTu3mQYrBpf6U
