--- a/src/main/resources/application-junit.properties
+++ b/src/main/resources/application-junit.properties
@@ -53,8 +53,8 @@ cas.4.service.login=http://devops-recap.htcinc.com:8080/cas/login
 cas.4.service.logout=http://devops-recap.htcinc.com:8080/cas/logout?service=
 cas.4.url.prefix=http://devops-recap.htcinc.com:8080/cas
 
-security.oauth2.client.clientId = htc_scsb
-security.oauth2.client.clientSecret = m0Fg7xbm3ZPq5djD3gBHTu3mQYrBpf6U
+security.oauth2.client.clientId = ${nypl.oauth.client.id}
+security.oauth2.client.clientSecret = ${nypl.oauth.client.secret}
 security.oauth2.client.accessTokenUri = https://isso.nypl.org/oauth/token
 security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/authorize/
 security.oauth2.client.scope = openid offline_access login:staff
@@ -62,4 +62,4 @@ security.oauth2.client.clientAuthenticationScheme = form
 security.oauth2.client.use-current-uri = false
 security.oauth2.client.registered-redirect-uri = http://devops-recap.htcinc.com:9091/search
 security.oauth2.client.pre-established-redirect-uri = http://devops-recap.htcinc.com:9091/search
-security.oauth2.resource.jwt.key-value = -----BEGIN PUBLIC KEY--
+security.oauth2.resource.jwt.key-value = ${nypl.oauth.resource.jwt.key-value}
