Modified for RECAP-357, RECAP-410 and RECAP-411.  Modified properties to point local.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -32,9 +32,9 @@ app.service.home=http://localhost:9091
 app.service.logout.scsb=http://localhost:9091/
 app.admin.userName=admin
 
-default.cas.service.login=http://192.168.55.198:8080/cas/login
-default.cas.service.logout=http://192.168.55.198:8080/cas/logout
-default.cas.url.prefix=http://192.168.55.198:8080/cas/
+default.cas.service.login=http://localhost:8080/cas/login
+default.cas.service.logout=http://localhost:8080/cas/logout
+default.cas.url.prefix=http://localhost:8080/cas/
 
 logout.redirect.uri=http://localhost:9091/
 
@@ -49,9 +49,9 @@ cas.2.service.logout=https://casdev.cc.columbia.edu/cas/logout?service=
 cas.2.url.prefix=https://casdev.cc.columbia.edu/cas
 
 #HTC CAS information
-cas.4.service.login=http://192.168.55.198:8080/cas/login
-cas.4.service.logout=http://192.168.55.198:8080/cas/logout?service=
-cas.4.url.prefix=http://192.168.55.198:8080/cas
+cas.4.service.login=http://localhost:8080/cas/login
+cas.4.service.logout=http://localhost:8080/cas/logout?service=
+cas.4.url.prefix=http://localhost:8080/cas
 
 security.oauth2.client.clientId = ${nypl.oauth.client.id}
 security.oauth2.client.clientSecret = ${nypl.oauth.client.secret}
