--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -28,15 +28,15 @@ ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
 
 #-- Properties for authentication server
 app.service.security=j_spring_cas_security_check
-app.service.home=https://tst-recap.htcinc.com:9091
-app.service.logout.scsb=https://tst-recap.htcinc.com:9091/
+app.service.home=https://tst-recap.htcinc.com
+app.service.logout.scsb=https://tst-recap.htcinc.com/
 app.admin.userName=admin
 
 default.cas.service.login=https://tst-recap.htcinc.com:8080/cas/login
 default.cas.service.logout=https://tst-recap.htcinc.com:8080/cas/logout
 default.cas.url.prefix=https://tst-recap.htcinc.com:8080/cas/
 
-logout.redirect.uri=https://tst-recap.htcinc.com:9091/
+logout.redirect.uri=https://tst-recap.htcinc.com/
 
 #PUL CAS informations
 cas.1.service.login=https://fed.princeton.edu/cas/login
@@ -60,6 +60,6 @@ security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/author
 security.oauth2.client.scope = openid offline_access login:staff
 security.oauth2.client.clientAuthenticationScheme = form
 security.oauth2.client.use-current-uri = false
-security.oauth2.client.registered-redirect-uri = https://tst-recap.htcinc.com:9091/search
-security.oauth2.client.pre-established-redirect-uri = https://tst-recap.htcinc.com:9091/search
+security.oauth2.client.registered-redirect-uri = https://tst-recap.htcinc.com/search
+security.oauth2.client.pre-established-redirect-uri = https://tst-recap.htcinc.com/search
 security.oauth2.resource.jwt.key-value = ${nypl.oauth.resource.jwt.key-value}
