Modified for RECAP-491 : Modified property to connect HTC Cas

--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -51,7 +51,7 @@ cas.2.url.prefix=https://casdev.cc.columbia.edu/cas
 #HTC CAS information
 cas.4.service.login=https://tst-recap.htcinc.com:8080/cas/login
 cas.4.service.logout=https://tst-recap.htcinc.com:8080/cas/logout?service=
-cas.4.url.prefix=https://tst-recap.htcinc.com:8080/cas
+cas.4.url.prefix=https://tst-recap.htcinc.com:8080/cas/
 
 security.oauth2.client.clientId = ${nypl.oauth.client.id}
 security.oauth2.client.clientSecret = ${nypl.oauth.client.secret}
