--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 #Database information
-spring.datasource.url=jdbc:mysql://localhost:3306/recap?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/recap?autoReconnect=true&useSSL=false
 spring.datasource.username=recap
 spring.datasource.password=recap
 
@@ -32,9 +32,9 @@ app.service.home=http://localhost:9091
 app.service.logout.scsb=http://localhost:9091/
 app.admin.userName=admin
 
-default.cas.service.login=http://localhost:8080/cas/login
-default.cas.service.logout=http://localhost:8080/cas/logout
-default.cas.url.prefix=http://localhost:8080/cas/
+default.cas.service.login=https://tst-recap.htcinc.com:8080/cas/login
+default.cas.service.logout=https://tst-recap.htcinc.com:8080/cas/logout
+default.cas.url.prefix=https://tst-recap.htcinc.com:8080/cas/
 
 logout.redirect.uri=http://localhost:9091/
 
@@ -49,9 +49,9 @@ cas.2.service.logout=https://casdev.cc.columbia.edu/cas/logout?service=
 cas.2.url.prefix=https://casdev.cc.columbia.edu/cas
 
 #HTC CAS information
-cas.4.service.login=http://localhost:8080/cas/login
-cas.4.service.logout=http://localhost:8080/cas/logout?service=
-cas.4.url.prefix=http://localhost:8080/cas
+cas.4.service.login=https://tst-recap.htcinc.com:8080/cas/login
+cas.4.service.logout=https://tst-recap.htcinc.com:8080/cas/logout?service=
+cas.4.url.prefix=https://tst-recap.htcinc.com:8080/cas
 
 security.oauth2.client.clientId = ${nypl.oauth.client.id}
 security.oauth2.client.clientSecret = ${nypl.oauth.client.secret}
@@ -60,6 +60,6 @@ security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/author
 security.oauth2.client.scope = openid offline_access login:staff
 security.oauth2.client.clientAuthenticationScheme = form
 security.oauth2.client.use-current-uri = false
-security.oauth2.client.registered-redirect-uri = http://localhost:9091/search
-security.oauth2.client.pre-established-redirect-uri = http://localhost:9091/search
+security.oauth2.client.registered-redirect-uri = https://tst-recap.htcinc.com:9091/search
+security.oauth2.client.pre-established-redirect-uri = https://tst-recap.htcinc.com:9091/search
 security.oauth2.resource.jwt.key-value = ${nypl.oauth.resource.jwt.key-value}
