--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -8,9 +8,9 @@ server.port=9091
 #Session Time out in Seconds
 server.session.timeout=1800
 
-server.protocol:https://
-scsb.url=tst-recap.htcinc.com:9093/
-scsb.shiro=tst-recap.htcinc.com:9092/
+server.protocol:http://
+scsb.url=tst-recap-direct.htcinc.com:9093/
+scsb.shiro=tst-recap-direct.htcinc.com:9092/
 
 #Logging Settings
 logging.file=/recap-vol/scsb-ui/logs/scsb-ui.log
@@ -27,16 +27,16 @@ ils.nypl.operator.password = ${nypl.operator.password}
 ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
 
 #-- Properties for authentication server
-app.service.security=j_spring_cas_security_check/
-app.service.home=https://tst-recap.htcinc.com
-app.service.logout.scsb=https://tst-recap.htcinc.com/
+app.service.security=j_spring_cas_security_check
+app.service.home=http://tst-recap-direct.htcinc.com:9091
+app.service.logout.scsb=http://tst-recap-direct.htcinc.com:9091/
 app.admin.userName=admin
 
-default.cas.service.login=https://tst-recap.htcinc.com:8080/cas/login
-default.cas.service.logout=https://tst-recap.htcinc.com:8080/cas/logout
-default.cas.url.prefix=https://tst-recap.htcinc.com:8080/cas/
+default.cas.service.login=http://tst-recap-direct.htcinc.com:8080/cas/login
+default.cas.service.logout=http://tst-recap-direct.htcinc.com:8080/cas/logout
+default.cas.url.prefix=http://tst-recap-direct.htcinc.com:8080/cas/
 
-logout.redirect.uri=https://tst-recap.htcinc.com/
+logout.redirect.uri=http://tst-recap-direct.htcinc.com:9091/
 
 #PUL CAS informations
 cas.1.service.login=https://fed.princeton.edu/cas/login
@@ -49,9 +49,9 @@ cas.2.service.logout=https://casdev.cc.columbia.edu/cas/logout?service=
 cas.2.url.prefix=https://casdev.cc.columbia.edu/cas
 
 #HTC CAS information
-cas.4.service.login=https://tst-recap.htcinc.com:8080/cas/login
-cas.4.service.logout=https://tst-recap.htcinc.com:8080/cas/logout?service=
-cas.4.url.prefix=https://tst-recap.htcinc.com:8080/cas/
+cas.4.service.login=http://tst-recap-direct.htcinc.com:8080/cas/login
+cas.4.service.logout=http://tst-recap-direct.htcinc.com:8080/cas/logout?service=
+cas.4.url.prefix=http://tst-recap-direct.htcinc.com:8080/cas
 
 security.oauth2.client.clientId = ${nypl.oauth.client.id}
 security.oauth2.client.clientSecret = ${nypl.oauth.client.secret}
@@ -60,6 +60,6 @@ security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/author
 security.oauth2.client.scope = openid offline_access login:staff
 security.oauth2.client.clientAuthenticationScheme = form
 security.oauth2.client.use-current-uri = false
-security.oauth2.client.registered-redirect-uri = https://tst-recap.htcinc.com/search
-security.oauth2.client.pre-established-redirect-uri = https://tst-recap.htcinc.com/search
+security.oauth2.client.registered-redirect-uri = http://tst-recap-direct.htcinc.com:9091/search
+security.oauth2.client.pre-established-redirect-uri = http://tst-recap-direct.htcinc.com:9091/search
 security.oauth2.resource.jwt.key-value = ${nypl.oauth.resource.jwt.key-value}
