Modified for RECAP-491 : Pointed only CAS to HTTPS

--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -8,9 +8,9 @@ server.port=9091
 #Session Time out in Seconds
 server.session.timeout=1800
 
-server.protocol:http://
-scsb.url=tst-recap-direct.htcinc.com:9093/
-scsb.shiro=tst-recap-direct.htcinc.com:9092/
+server.protocol:https://
+scsb.url=tst-recap.htcinc.com:9093/
+scsb.shiro=tst-recap.htcinc.com:9092/
 
 #Logging Settings
 logging.file=/recap-vol/scsb-ui/logs/scsb-ui.log
@@ -27,16 +27,16 @@ ils.nypl.operator.password = ${nypl.operator.password}
 ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
 
 #-- Properties for authentication server
-app.service.security=j_spring_cas_security_check
-app.service.home=http://tst-recap-direct.htcinc.com:9091
-app.service.logout.scsb=http://tst-recap-direct.htcinc.com:9091/
+app.service.security=j_spring_cas_security_check/
+app.service.home=https://tst-recap.htcinc.com
+app.service.logout.scsb=https://tst-recap.htcinc.com/
 app.admin.userName=admin
 
 default.cas.service.login=http://tst-recap-direct.htcinc.com:8080/cas/login
 default.cas.service.logout=http://tst-recap-direct.htcinc.com:8080/cas/logout
 default.cas.url.prefix=http://tst-recap-direct.htcinc.com:8080/cas/
 
-logout.redirect.uri=http://tst-recap-direct.htcinc.com:9091/
+logout.redirect.uri=https://tst-recap.htcinc.com/
 
 #PUL CAS informations
 cas.1.service.login=https://fed.princeton.edu/cas/login
