Updated the urls with the container name

--- a/src/main/resources/application-local-container.properties
+++ b/src/main/resources/application-local-container.properties
@@ -8,7 +8,7 @@ server.port=9091
 #Session Time out in Seconds
 server.session.timeout=1800
 
-server.protocol:http://
+server.protocol=http://
 scsb.url=scsb:9093/
 scsb.shiro=scsb-shiro:9092/
 
