--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -8,9 +8,9 @@ server.port=9091
 #Session Time out in Seconds
 server.session.timeout=1800
 
-server.protocol:https://
-scsb.url=tst-recap.htcinc.com:9093/
-scsb.shiro=tst-recap.htcinc.com:9092/
+server.protocol=http://
+scsb.url=scsb:9093/
+scsb.shiro=scsb-shiro:9092/
 
 #Logging Settings
 logging.file=/recap-vol/scsb-ui/logs/scsb-ui.log
