RECAP-491 : Fixed issue with navigation after authentication.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,8 @@ spring.datasource.password=recap
 server.port=9091
 #Session Time out in Seconds
 server.session.timeout=1800
+#Tomcat Secure
+server.secure=false
 
 server.protocol:http://
 scsb.url=dev-recap.htcinc.com:9093/
