--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -7,6 +7,8 @@ spring.datasource.password=recap
 server.port=9091
 #Session Time out in Seconds
 server.session.timeout=1800
+#Tomcat Secure
+server.secure=true
 
 server.protocol:https://
 scsb.url=tst-recap.htcinc.com:9093/
