RECAP-539 : Refactored the code to use generic way to handle institution.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -41,20 +41,21 @@ default.cas.url.prefix=http://localhost:8080/cas/
 logout.redirect.uri=http://localhost:9091/
 
 #PUL CAS informations
-cas.1.service.login=https://fed.princeton.edu/cas/login
-cas.1.service.logout=https://fed.princeton.edu/cas/logout?service=
-cas.1.url.prefix=https://fed.princeton.edu/cas
+cas.PUL.service.login=https://fed.princeton.edu/cas/login
+cas.PUL.service.logout=https://fed.princeton.edu/cas/logout?service=
+cas.PUL.url.prefix=https://fed.princeton.edu/cas
 
 #CUL CAS information
-cas.2.service.login=https://casdev.cc.columbia.edu/cas/login
-cas.2.service.logout=https://casdev.cc.columbia.edu/cas/logout?service=
-cas.2.url.prefix=https://casdev.cc.columbia.edu/cas
+cas.CUL.service.login=https://casdev.cc.columbia.edu/cas/login
+cas.CUL.service.logout=https://casdev.cc.columbia.edu/cas/logout?service=
+cas.CUL.url.prefix=https://casdev.cc.columbia.edu/cas
 
 #HTC CAS information
-cas.4.service.login=http://localhost:8080/cas/login
-cas.4.service.logout=http://localhost:8080/cas/logout?service=
-cas.4.url.prefix=http://localhost:8080/cas
+cas.HTC.service.login=http://localhost:8080/cas/login
+cas.HTC.service.logout=http://localhost:8080/cas/logout?service=
+cas.HTC.url.prefix=http://localhost:8080/cas
 
+#NYPL OAuth informations
 security.oauth2.client.clientId = ${nypl.oauth.client.id}
 security.oauth2.client.clientSecret = ${nypl.oauth.client.secret}
 security.oauth2.client.accessTokenUri = https://isso.nypl.org/oauth/token
