--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -34,26 +34,27 @@ app.service.home=https://tst-recap.htcinc.com
 app.service.logout.scsb=https://tst-recap.htcinc.com/
 app.admin.userName=admin
 
-default.cas.service.login=https://tst-recap.htcinc.com:8080/cas/login
-default.cas.service.logout=https://tst-recap.htcinc.com:8080/cas/logout
-default.cas.url.prefix=https://tst-recap.htcinc.com:8080/cas/
+#Default CAS information
+default.cas.service.login=${external.default.cas.service.login}
+default.cas.service.logout=${external.default.cas.service.logout}
+default.cas.url.prefix=${external.default.cas.url.prefix}
 
 logout.redirect.uri=https://tst-recap.htcinc.com/
 
-#PUL CAS informations
-cas.PUL.service.login=https://fed.princeton.edu/cas/login
-cas.PUL.service.logout=https://fed.princeton.edu/cas/logout?service=
-cas.PUL.url.prefix=https://fed.princeton.edu/cas
+#PUL CAS information
+cas.1.service.login=${external.cas.1.service.login}
+cas.1.service.logout=${external.cas.1.service.logout}
+cas.1.url.prefix=${external.cas.1.url.prefix}
 
 #CUL CAS information
-cas.CUL.service.login=https://casdev.cc.columbia.edu/cas/login
-cas.CUL.service.logout=https://casdev.cc.columbia.edu/cas/logout?service=
-cas.CUL.url.prefix=https://casdev.cc.columbia.edu/cas
+cas.2.service.login=${external.cas.2.service.login}
+cas.2service.logout=${external.cas.2.service.logout}
+cas.2.url.prefix=${external.cas.2.url.prefix}
 
 #HTC CAS information
-cas.HTC.service.login=https://tst-recap.htcinc.com:8080/cas/login
-cas.HTC.service.logout=https://tst-recap.htcinc.com:8080/cas/logout?service=
-cas.HTC.url.prefix=https://tst-recap.htcinc.com:8080/cas/
+cas.4.service.login=${external.cas.4.service.login}
+cas.4.service.logout=${external.cas.4.service.logout}
+cas.4.url.prefix=${external.cas.4.url.prefix}
 
 #NYPL OAuth informations
 security.oauth2.client.clientId = ${nypl.oauth.client.id}
