Modified properties of CAS to have external properties.

--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -42,19 +42,19 @@ default.cas.url.prefix=${external.default.cas.url.prefix}
 logout.redirect.uri=http://uat-recap.htcinc.com:9091/
 
 #PUL CAS information
-cas.1.service.login=${external.cas.1.service.login}
-cas.1.service.logout=${external.cas.1.service.logout}
-cas.1.url.prefix=${external.cas.1.url.prefix}
+cas.PUL.service.login=${external.cas.PUL.service.login}
+cas.PUL.service.logout=${external.cas.PUL.service.logout}
+cas.PUL.url.prefix=${external.cas.PUL.url.prefix}
 
 #CUL CAS information
-cas.2.service.login=${external.cas.2.service.login}
-cas.2service.logout=${external.cas.2.service.logout}
-cas.2.url.prefix=${external.cas.2.url.prefix}
+cas.CUL.service.login=${external.cas.CUL.service.login}
+cas.CUL.service.logout=${external.cas.CUL.service.logout}
+cas.CUL.url.prefix=${external.cas.CUL.url.prefix}
 
 #HTC CAS information
-cas.4.service.login=${external.cas.4.service.login}
-cas.4.service.logout=${external.cas.4.service.logout}
-cas.4.url.prefix=${external.cas.4.url.prefix}
+cas.HTC.service.login=${external.cas.HTC.service.login}
+cas.HTC.service.logout=${external.cas.HTC.service.logout}
+cas.HTC.url.prefix=${external.cas.HTC.url.prefix}
 
 #NYPL OAuth informations
 security.oauth2.client.clientId = ${nypl.oauth.client.id}
