Modified properties of CAS to have external properties.

--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -31,15 +31,15 @@ ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
 #-- Properties for authentication server
 app.service.security=j_spring_cas_security_check
 app.service.home=https://tst-recap.htcinc.com
-app.service.logout.scsb=https://tst-recap.htcinc.com/
+app.service.logout.scsb=${external.app.service.logout.scsb}
 app.admin.userName=admin
+
+logout.redirect.uri=${external.logout.redirect.uri}
 
 #Default CAS information
 default.cas.service.login=${external.default.cas.service.login}
 default.cas.service.logout=${external.default.cas.service.logout}
 default.cas.url.prefix=${external.default.cas.url.prefix}
-
-logout.redirect.uri=https://tst-recap.htcinc.com/
 
 #PUL CAS information
 cas.PUL.service.login=${external.cas.PUL.service.login}
@@ -55,6 +55,7 @@ cas.CUL.url.prefix=${external.cas.CUL.url.prefix}
 cas.HTC.service.login=${external.cas.HTC.service.login}
 cas.HTC.service.logout=${external.cas.HTC.service.logout}
 cas.HTC.url.prefix=${external.cas.HTC.url.prefix}
+
 #NYPL OAuth informations
 security.oauth2.client.clientId = ${nypl.oauth.client.id}
 security.oauth2.client.clientSecret = ${nypl.oauth.client.secret}
