--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -31,15 +31,15 @@ ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
 #-- Properties for authentication server
 app.service.security=j_spring_cas_security_check
 app.service.home=http://localhost:9091
-app.service.logout.scsb=http://localhost:9091/
+app.service.logout.scsb=${external.app.service.logout.scsb}
 app.admin.userName=admin
+
+logout.redirect.uri=${external.logout.redirect.uri}
 
 #Default CAS information
 default.cas.service.login=${external.default.cas.service.login}
 default.cas.service.logout=${external.default.cas.service.logout}
 default.cas.url.prefix=${external.default.cas.url.prefix}
-
-logout.redirect.uri=http://localhost:9091/
 
 #PUL CAS information
 cas.PUL.service.login=${external.cas.PUL.service.login}
