NYPL Oauth Troubleshoot.

--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -57,13 +57,12 @@ cas.HTC.service.logout=${external.cas.HTC.service.logout}
 cas.HTC.url.prefix=${external.cas.HTC.url.prefix}
 
 #NYPL OAuth informations
-security.oauth2.client.clientId = ${nypl.oauth.client.id}
-security.oauth2.client.clientSecret = ${nypl.oauth.client.secret}
-security.oauth2.client.accessTokenUri = https://isso.nypl.org/oauth/token
-security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/authorize/
-security.oauth2.client.scope = openid offline_access login:staff
+security.oauth2.client.clientId = 682344361936771
+security.oauth2.client.clientSecret = 2b6d372bef87b9de3152181302e9470c
+security.oauth2.client.accessTokenUri = https://graph.facebook.com/oauth/access_token
+security.oauth2.client.userAuthorizationUri = https://www.facebook.com/dialog/oauth
+security.oauth2.client.tokenName = oauth_token
+security.oauth2.client.authenticationScheme = query
 security.oauth2.client.clientAuthenticationScheme = form
-security.oauth2.client.use-current-uri = false
-security.oauth2.client.registered-redirect-uri = https://tst-recap.htcinc.com/search
-security.oauth2.client.pre-established-redirect-uri = https://tst-recap.htcinc.com/search
-security.oauth2.resource.jwt.key-value = ${nypl.oauth.resource.jwt.key-value}
+security.oauth2.client.use-current-uri = true
+security.oauth2.resource.userInfoUri = https://graph.facebook.com/me
