--- a/src/main/resources/application-tst.properties
+++ b/src/main/resources/application-tst.properties
@@ -63,7 +63,7 @@ security.oauth2.client.accessTokenUri = https://isso.nypl.org/oauth/token
 security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/authorize/
 security.oauth2.client.scope = openid offline_access login:staff
 security.oauth2.client.clientAuthenticationScheme = form
-security.oauth2.client.use-current-uri = true
+security.oauth2.client.use-current-uri = false
 security.oauth2.client.registered-redirect-uri = https://tst-recap.htcinc.com/search
 security.oauth2.client.pre-established-redirect-uri = https://tst-recap.htcinc.com/search
 security.oauth2.resource.jwt.key-value = ${nypl.oauth.resource.jwt.key-value}
