--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,10 @@ dependencies {
 	compile('org.apache.shiro:shiro-core:1.4.0-RC2')
 	runtime('mysql:mysql-connector-java')
 
+// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.6.0'
+
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
