Updated the UAT property file.

--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -8,7 +8,7 @@ server.port=9091
 #Session Time out in Seconds
 server.session.timeout=1800
 #Tomcat Secure
-server.secure=false
+server.secure=true
 
 server.protocol=http://
 scsb.url=scsb:9093/
@@ -30,7 +30,7 @@ ils.nypl.oauth.token.api = ${nypl.oauth.token.api}
 
 #-- Properties for authentication server
 app.service.security=j_spring_cas_security_check
-app.service.home=http://uat-recap.htcinc.com:9091
+app.service.home=https://uat-recap.htcinc.com
 app.service.logout.scsb=${external.app.service.logout.scsb}
 app.admin.userName=admin
 
@@ -64,6 +64,6 @@ security.oauth2.client.userAuthorizationUri = https://isso.nypl.org/oauth/author
 security.oauth2.client.scope = openid offline_access login:staff
 security.oauth2.client.clientAuthenticationScheme = form
 security.oauth2.client.use-current-uri = false
-security.oauth2.client.registered-redirect-uri = http://uat-recap.htcinc.com:9091/search
-security.oauth2.client.pre-established-redirect-uri = http://uat-recap.htcinc.com:9091/search
+security.oauth2.client.registered-redirect-uri = https://uat-recap.htcinc.com/login
+security.oauth2.client.pre-established-redirect-uri = https://uat-recap.htcinc.com/login
 security.oauth2.resource.jwt.key-value = ${nypl.oauth.resource.jwt.key-value}
