RECAP-773 : Removed the server.protocol from the properties.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -10,9 +10,8 @@ server.session.timeout=1800
 #Tomcat Secure
 server.secure=false
 
-server.protocol:http://
-scsb.url=localhost:9093/
-scsb.shiro=localhost:9092/
+scsb.url=http://localhost:9093/
+scsb.shiro=http://localhost:9092/
 
 #Logging Settings
 logging.file=${user.home}/scsb-ui/logs/scsb-ui.log
