--- a/src/main/resources/application-junit.properties
+++ b/src/main/resources/application-junit.properties
@@ -10,9 +10,8 @@ server.session.timeout=1800
 #Tomcat Secure
 server.secure=false
 
-server.protocol=http://
-scsb.url=scsb:9093/
-scsb.shiro=scsb-shiro:9092/
+scsb.url=http://scsb:9093/
+scsb.shiro=http://scsb-shiro:9092/
 
 #Logging Settings
 logging.file=${user.home}/scsb-ui/logs/scsb-ui.log
