Recap-804 :  Modified jobs UI to retain cron expression after unscheduling. Provided link to jobs to look at the job executions.

--- a/src/main/resources/application-junit.properties
+++ b/src/main/resources/application-junit.properties
@@ -12,6 +12,8 @@ server.secure=false
 
 scsb.url=http://scsb:9093/
 scsb.shiro=http://scsb-shiro:9092/
+#This url is to have a link in UI to look at the job executions
+scsb.batch.schedule.url=http://scsb-batch-scheduler:9096/
 
 #Logging Settings
 logging.file=${user.home}/scsb-ui/logs/scsb-ui.log
