--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,6 +12,8 @@ server.secure=false
 
 scsb.url=http://localhost:9093/
 scsb.shiro=http://localhost:9092/
+#This url is to have a link in UI to look at the job executions
+scsb.batch.schedule.url=http://localhost:9096/
 
 #Logging Settings
 logging.file=${user.home}/scsb-ui/logs/scsb-ui.log
