--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -12,6 +12,8 @@ server.secure=true
 
 scsb.url=http://scsb:9093/
 scsb.shiro=http://scsb-shiro:9092/
+#This url is to have a link in UI to look at the job executions
+scsb.batch.schedule.url=http://scsb-batch-scheduler:9096/
 
 #Logging Settings
 logging.file=/recap-vol/scsb-ui/logs/scsb-ui.log
