--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,3 +68,10 @@ security.oauth2.client.use-current-uri = false
 security.oauth2.client.registered-redirect-uri = http://localhost:9091/search
 security.oauth2.client.pre-established-redirect-uri = http://localhost:9091/search
 security.oauth2.resource.jwt.key-value = ${nypl.oauth.resource.jwt.key-value}
+
+#Spring Configuration to keep mysql connection alive when application idle.
+spring.datasource.test-while-idle=true
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+spring.datasource.time-between-eviction-runs-millis=5000
+spring.datasource.min-evictable-idle-time-millis=60000
