--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,3 +75,6 @@ spring.datasource.test-on-borrow=true
 spring.datasource.validation-query=SELECT 1
 spring.datasource.time-between-eviction-runs-millis=5000
 spring.datasource.min-evictable-idle-time-millis=60000
+
+#SCSB_KEY
+scsb.swagger.api.key=recap
